# TIQ-RPC

./: CMakeLists.txt  README.md
src/: main.cpp
src/include/: discord_utils.cpp  discord_utils.h  error_handle.cpp  error_handle.h  tiq_levels.cpp  tiq_levels.h  tiq_utils.cpp  tiq_utils.h  toml_utils.cpp  toml_utils.h
src/tiq/: gmb.cpp  rm.cpp  tiq.hpp  wi.cpp
